Sat May  7 16:22:13 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (int_pair_to_real_inclusive): optimize to multiply
	  without Bignum.

Sat May  7 07:58:02 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_exec_getargs): honor the expected argument types
	  over the conversion method.  the basic language functionality
	  should be robust.  [ruby-core:75388] [Bug #12355]

Fri May  6 08:16:26 2016  David Silva  <david.silva@digital.cabinet-office.gov.uk>

	* enum.c (enum_find): [DOC] add more examples to the documentation
	  of Enumerable#detect, to show that it equals to Enumerable#find.
	  [Fix GH-1340]

Thu May  5 18:08:31 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* test/ruby/test_complexrational.rb: Remove duplicated raise.

Thu May  5 14:41:05 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* string.c (rb_str_sub): Fix a special match variable name.
	  [ci skip]

Thu May  5 12:22:17 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_eval_cmd, rb_catch_obj): use TH_JUMP_TAG with the
	  same rb_thread_t used for TH_PUSH_TAG, instead of JUMP_TAG with
	  the current thread global variable.

Thu May  5 10:49:33 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (fill_random_bytes_syscall): use arc4random_buf if
	  available.

Wed May  4 23:13:58 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* numeric.c (fix_plus): Remove rb_nucomp_add prototype
	  declaration.

	* numeric.c (fix_mul): Remove rb_nucomp_mul prototype
	  declaration.

	* internal.h (rb_nucomp_add, rb_nucomp_mul): add prototype
	  declarations.

Wed May  4 18:38:00 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* lib/net/http/header.rb (Net::HTTPHeader#{each_header,each_name,
	  each_capitalized_name,each_value,each_capitalized}): Return
	  sized enumerators.

	* test/net/http/test_httpheader.rb: add test for above.

Wed May  4 17:53:15 2016  Kazuki Tsujimoto  <kazuki@callcc.net>
